[tool.poetry]
name = "data_generator"
version = "0.1.0"
description = ""
authors = ["SeonbeomKim <kymj1@naver.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "1.16.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
